Fri May  8 18:06:52 1998  Theodore Y. Ts'o  <tytso@mit.edu>

	* ftpcmd.y (cmd): Fix Y2K problem in the MDTM command.

Fri Apr 10 20:06:31 1998  Tom Yu  <tlyu@mit.edu>

	* ftpd.c (receive_data):
	(send_data): Add support for sigsetjmp().
	(main): Use sigaction() if we can to avoid SysV lossage.
	(send_file_list): Oops missed a sigsetjmp() call.
	(send_data): Add call to secure_flush() to send a zero length
	buffer when aborting.
	(send_file_list): Add call to secure_flush() to send a zero length
	buffer when aborting.

	* ftpcmd.y (PBSZ): Remove restriction on shrinking buffer size.

Thu Mar  5 13:59:47 1998  Dan Winship  <danw@mit.edu>

	* ftpcmd.y (getline): Don't syslog passwords! (or newlines)

Tue Feb 24 21:34:34 1998  Tom Yu  <tlyu@mit.edu>

	* ftpcmd.y: Add production "nonguest" to catch things that
	anonymous users aren't supposed to do.  Replace "check_login" with
	"nonguest" in a few places to prevent w4r3z d00dz from being
	lame with world-writable incoming directories.

Sun Feb 22 19:37:07 1998  Tom Yu  <tlyu@mit.edu>

	* ftpd.c: Use krb5_seteuid() and krb5_setegid(). [krb5-libs/505]

	* Makefile.in (ftpd): Fix up KRB4COMPAT_LIBS (was KRB5_BASE_LIBS),
	and add UTIL_LIB.

Wed Feb 18 15:30:10 1998  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Remove trailing slash from thisconfigdir.  Fix up
	BUILDTOP for new conventions.

Fri Feb 13 22:23:34 1998  Theodore Y. Ts'o  <tytso@mit.edu>

	* ftpd.c: Applied lxs's changes to make ftpd safe for systems
		where sizeof(off_t) > sizeof(int).

Fri Feb 13 15:31:46 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in (thisconfigdir), configure.in: Point the
 		configuration directory at our parent, and remove our
		local configure.in

Mon Feb  2 17:02:29 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Define BUILDTOP and thisconfigdir in the Makefile

Fri Feb  6 13:25:28 1998  Theodore Y. Ts'o  <tytso@mit.edu>

	* popen.c (ftpd_popen): Make sure you can't overrun the argv[] and