@@ -1,3 +1,8 @@
+1998-05-26  Theodore Ts'o  <tytso@rsts-11.mit.edu>
+
+	* logwtmp.c: Include paths.h if present, and use _PATH_WTMP to
+		determine WTMPFILE.
+
 Fri May  8 18:06:52 1998  Theodore Y. Ts'o  <tytso@mit.edu>
 
 	* ftpcmd.y (cmd): Fix Y2K problem in the MDTM command.
